fix: dark mode/localization updates

--- a/Ogrenciler/Fatih/Odevler/Final/crypto-exchange/src/components/molecules/BlogCard/BlogCard.module.css
+++ b/Ogrenciler/Fatih/Odevler/Final/crypto-exchange/src/components/molecules/BlogCard/BlogCard.module.css
@@ -1,7 +1,3 @@
-.wrapper {
-  background-color: var(--surface);
-}
-
 .title {
   color: var(--on-surface);
 }
