--- a/Ogrenciler/Fatih/Odevler/Final/crypto-exchange/src/components/molecules/BuyStepThree/BuyStepThree.module.css
+++ b/Ogrenciler/Fatih/Odevler/Final/crypto-exchange/src/components/molecules/BuyStepThree/BuyStepThree.module.css
@@ -5,3 +5,11 @@
 .subWrapper {
   background-color: var(--background);
 }
+
+.title {
+  color: var(--on-surface);
+}
+
+.text {
+  color: var(--secondary);
+}
