--- a/Ogrenciler/Fatih/Odevler/Final/crypto-exchange/src/components/molecules/BuyStepTwo/BuyStepTwo.module.css
+++ b/Ogrenciler/Fatih/Odevler/Final/crypto-exchange/src/components/molecules/BuyStepTwo/BuyStepTwo.module.css
@@ -1,4 +1,4 @@
-.wrapper {
+.bg {
   background-color: var(--surface);
 }
 
