--- a/Ogrenciler/Fatih/Odevler/Final/crypto-exchange/src/components/molecules/DashboardStats/DashboardStats.module.css
+++ b/Ogrenciler/Fatih/Odevler/Final/crypto-exchange/src/components/molecules/DashboardStats/DashboardStats.module.css
@@ -1,6 +1,5 @@
 .wrapper {
   background-color: var(--surface);
-  height: 144px;
 }
 
 .title {
